# flowkit

./: .dockerignore  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  pyproject.toml
.cursor/plans/: build_flowkit_library_2f645e6c.plan.md
docs/: FLOW_API.md  FLOW_IMPLEMENTATION.md  FUNCTIONAL_API.md  FUNCTIONAL_API_SUMMARY.md  KERAS_FLOW_SUMMARY.md
examples/: ML_PIPELINE_README.md  advanced_flow_example.py  basic_example.py  conditional_example.py  functional_api_example.py  functional_comprehensive_example.py  functional_simple_example.py  keras_basic_etl.py  keras_flow_example.py  logging_demo.py  ml_pipeline_example.py  parallel_example.py
flowkit/: __init__.py  dag.py  exceptions.py  flow.py  functional.py  logging.py  state.py  task.py
tests/: __init__.py  conftest.py  test_conditional.py  test_dag.py  test_flow.py  test_functional_api.py  test_logging.py  test_state.py  test_task.py
